@@ -2,6 +2,8 @@
 
 New Searches
 
+* wn - WordNet online lexical reference system search (from Princeton)
+       contributed by Shakeel Mahate.
 
 Modified Searches
 
